  y = devel-series   - represents a set of planned features
  z = minor version  - version number of the current development series
  Rt = 'rx'          - stable release number x
  Rt = 'dx'  	     - development version

-----------------------------------------------------------------------

Last officially released version is -*> v1.6.9r9 <*-

14012000 (v1.6.11d10)
	- added: -ef4 - 2th-order, 24dB filter which simulates
	         an analog active RC-lowpass filter - submitted by 
		 Stefan Fendt
	- added: support for ALSA 0.5.x (pcm2, no loopback)
	- removed: support for ALSA 0.3.1 and older
	- changed: 'cs-edit' now possible while processing
	- changed: raised-priority mode moved from chainsetups 
		   to session-level (isn't saved to ecs-files, etc)
	- fixed: removed the huge delay in (dis)connecting chainsetups
	- fixed: 'fw', 'rw', 'setpos' crashed if executed without
		 parameters 
	- fixed: under/overrun problems with ALSA drivers
	- fixed: stdin/stdout not working
	- fixed: c-add and c-select didn't accept multiple parameters
	- fixed: problems with -etf memory handling
03012000 (v1.6.10d10)
	- added: a realtime null audio device 'rtnull' - simulates
		 soundcard behaviour (warns about over/underruns)
	- changed: 'make install' isn't forced anymore
	- changed: mono noisegate (-enm) replaced with a new
	           multichannel noisegate
	- changed: behaviour of -r; now changes scheduling policy 
		   to SCHED_FIFO (realtime) - beware! this gives 
                   better performance, but might cause total 
		   lock-ups if something goes wrong
	- fixed: improvements to autoconf scripts; --enable-qt and 
		 --disable-qt now work as expected - thanks to 
		 Vadim Tkachenko for the patch
	- fixed: seg.faults with some files when using -z:db
	- fixed: many bug fixes to delay effects (-etf, -etr and -etd)
	- fixed: nasty bug in ewf-routines
	- fixed: double-buffered mode (-z:db) sometimes discarded the
		 last few bytes before end-of-file